--- a/sarevokfriendship/sarevokfriendship-readme-english.html
+++ b/sarevokfriendship/sarevokfriendship-readme-english.html
@@ -314,12 +314,11 @@
 
           <a href="http://www.spellholdstudios.net/ie/npciep">Mod Website</a> &#8226;
           <a href="http://www.shsforums.net/index.php?showforum=574">Mod Forum</a> &#8226;
-          Version: 2.4
+          Version: 2.5
         </p>
         <hr />
         <p class="menu">
           <a href="#intro">Introduction</a> &middot;
-
           <a href="#installation">Installation</a> &middot;
           <a href="#faq">FAQ</a> &middot;
           <a href="#credits">Credits</a> &middot;
@@ -332,42 +331,45 @@
         <!-- ================== I n t r o d u c t i o n ================== -->
         <a name="intro" id="intro"></a>
         <div class="content">
-          <h2>Introduction</h2>
-          <p>One of the things many find sorely lacking in the Bioware NPCs are the more complex relationships presented by modern NPC mods--especially in regards to "friendships," the relationships NPCs have with the PC when not romancing them.</p>
+          <h2>Introduction</h2><br>
+
+          <p>One of the things many find sorely lacking in the Bioware NPCs are the more complex relationships presented by modern NPC mods--especially in regards to "friendships", the relationships NPCs have with the PC when not romancing them.</p>
 
           <p>This mod adds a series of dialogues with Sarevok, the PC's brother, expanding on Sarevok's experiences and struggles.</p>
 
-          <p>Visit the <a href="http://www.spellholdstudios.net/ie/npciep">website</a> or <a href="http://www.shsforums.net/index.php?showforum=555">forum</a> for all the latest updates.</p>
+          <p>Visit the <a href="http://www.spellholdstudios.net/ie/npciep">website</a> or <a href="http://www.shsforums.net/index.php?showforum=555">forum</a> for all the latest updates.</p><br>
+
           <address>
             <span class="footer">Sarevok Friendship &gt; Introduction</span> &#8226;<a href="#top">BACK TO TOP</a>
-
           </address>
         </div>
 
         <!-- ================== I n s t a l l a t i o n ================== -->
         <a name="installation" id="installation"></a>
         <div class="content">
-          <h2>Installation</h2>
-          <h5>PC</h5>
+          <h2>Installation</h2><br>
+          <h5>Windows</h5>
 
-          <p>The Sarevok Friendship is a WeiDU mod, packaged in an extractable .RAR archive. Simply unrar <em>"sarevokfriendship_v1.rar"</em> (<a href="http://www.rarlabs.com">WinRAR</a>) into your Baldur's Gate II directory and run <em>"setup-Sarevokfriendship.exe"</em>.
-          <p>To uninstall, run <em>"setup-Sarevokfriendship.exe"</em> again and select the uninstall option.</p>
+          <p>The Sarevok Friendship is a WeiDU mod, packaged in an extractable .RAR archive. Simply unpack the mod package into your Baldur's Gate II directory and run "<em>setup-sarevokfriendship.exe</em>".
+          <p>To un-install, run "<em>setup-Sarevokfriendship.exe</em>" again and select the un-install option.</p></br>
+
+		<center><hr style="width: 90%; color: #781808; background-color: #781808; " /></center><br>
+
           <h5>Compatibility and Installation Order</h5>
+          <p>The Sarevok Friendship mod should be compatible with all WeiDU mods, however, we cannot test every single one. It is only compatible with BGII: ToB. If you do encounter an error, please contact <a href="kae@spellholdstudios.net">K'aeloree</a> or alternatively post on the <a href="http://www.shsforums.net/index.php?showforum=574">forums</a>.</p>
+          <p>Although it is not required for the Sarevok Friendship to function properly, it is always a good idea install the latest version of the <a href="http://www.gibberlings3.net/bg2fixpack/">BG2 Fixpack</a>.</p><br>
 
-          <p>The Sarevok Friendship mod should be compatible with all WeiDU mods, however, we cannot test every single one. It is only compatible with BGII: ToB. If you do encounter an error, please contact K'aeloree (kae@spellholdstudios.net) or alternatively post on the <a href="http://www.shsforums.net/index.php?showforum=574">forums</a>.</p>
-          <p>Although it is not required for the Sarevok Friendship to function properly, it is always a good idea install the latest version of the <a href="http://www.gibberlings3.net/bg2fixpack/">BG2 Fixpack</a>.</p>
           <address>
             <span class="footer">Sarevok Friendship &gt; Installation</span> <a href="#top">BACK TO TOP</a>
-
           </address>
         </div>
 
         <!-- ================== F A Q ================== -->
         <a name="faq" id="faq"></a>
         <div class="content">
-          <h2>Frequently Asked Questions</h2>
-          <p><strong>Q: Is the Sarevok Friendship compatible with XYZ mod?</strong><br />A: It most certainly should be, but we have not tested it with every single mod available. If you do encounter an error, please contact K'aeloree (kae@spellholdstudios.net) or alternatively post on the <a href="http://www.shsforums.net">forums</a>.</p>
+          <h2>Frequently Asked Questions</h2><br>
 
+          <p><strong>Q: Is the Sarevok Friendship compatible with XYZ mod?</strong><br />A: It most certainly should be, but we have not tested it with every single mod available. If you do encounter an error, please contact <a href="kae@spellholdstudios.net">K'aeloree</a> or alternatively post on the <a href="http://www.shsforums.net">forums</a>.</p>
           <p><strong>Q: Is the Sarevok friendship compatible with the Sarevok Romance?</strong><br />A: Yes; friendship talks will shut off once you begin the romance.</p>
           <p><strong>Q: When will the friendship start?</strong><br />A: It should begin not too long after Sarevok joins the party.</p>
           <p><strong>Q: This mod isn't in character at *all*.</strong><br />A: We're always looking for ways to improve the characterisation in this mod, so please post any suggestions or constructive criticism on the <a href="http://www.shsforums.net">forums</a>.</p>
@@ -375,9 +377,9 @@
           <p><strong>Q: How many dialogues are there added in total?</strong><br />A: There are a total of 7 new dialogues added by the mod. Some of these do have particular circumstances in which they occur--for more information feel free to ask on the forum.</p>
           <p><strong>Q: Does this mod change the game in any way besides adding more dialogue to Sarevok?</strong><br />A: No, it shouldn't.</p>
           <p><strong>Q: Is there any chance that player initiated dialogue will be added in future?</strong><br />A: There are currently no plans for it, but if players are interested in it we would be happy to consider adding some in future versions.</p>
-          <p><strong>Q: I would like to translate the Sarevok friendship into another language. Any chance you could TRAify the mod?</strong><br />A: Sure, we'd be happy to. If you are interested in translating, just send us a line and I'll see what I can do for the next version.</p>
-          <address>
+          <p><strong>Q: I would like to translate the Sarevok friendship into another language. Any chance you could TRAify the mod?</strong><br />A: Sure, we'd be happy to. If you are interested in translating, just send us a line and I'll see what I can do for the next version.</p><br>
 
+          <address>
             <span class="footer">Sarevok Friendship &gt; FAQ</span> &#8226;<a href="#top">BACK TO TOP</a>
           </address>
         </div>
@@ -386,25 +388,31 @@
         <a name="credits" id="credits"></a>
         <div class="content">
 
-          <h2>Credits</h2>
-          <p>Thank you to everyone on the Interaction Expansion project team, and everyone who has contributed to the mod!</p>
+          <h2>Credits</h2><br>
           <span class="t1">Author:</span> <span class="t2">Aeryn</span><br />
           <span class="t1">Coder:</span> <span class="t2">Lava Del'Vortel</span><br />
 
-          <span class="t1">With thanks to:</span> <span class="t2">The IEP team, Alessia, IceDragon, BGII-addicted, AmyAE, Dagger, lotiel, JupitersDarling, zarffyn and Arconian03</span><br />
-          <hr class="floatfix" />
+          <hr class="floatfix" /><br>
+          <h5>Acknowledgements:</h5><br>
+          <ul>
+            <li>Thank you to everyone on the Interaction Expansion project team, and everyone who has contributed to the mod!</li>
+            <li>French translation: Isaya.</li>
+            <li>Polish translation: Astharoshe, member of Stars of Mystra.</li>
+            <li>Chinese translation: Merzbau.</li>
+            <li>With thanks to The IEP team, Alessia, IceDragon, BGII-addicted, AmyAE, Dagger, lotiel, JupitersDarling, zarffyn and Arconian03.</li>
+          </ul><br><br>
+
           <h5>Programs/tools used in creation:</h5><br />
           <ul>
-            <li><a href="http://www.weidu.org">WeiDU</a>, by Westley Weimer/Valerio Bigiani (the bigg)</li>
-            <li><a href="http://www.idi.ntnu.no/~joh/ni/">Near Infinity</a>, by Jon Olav Hauglid</li>
+            <li><a href="https://github.com/WeiDUorg/weidu/releases"><acronym title="Weimer Dialogue Utility">WeiDU</acronym></a>, by Wes Weimer, Valerio Bigiani (the bigg) and Wisp.</li>
+            <li><a href="https://github.com/Argent77/NearInfinity/releases">Near Infinity</a>, by Jon Olav Hauglid, FredSRichardson, and Argent77.</li>
+            <li><a href="http://www.rarlab.com/">WinRAR</a>, by Eugene Roshal/Alexander Roshal.</li>
+            <li><a href="https://gibberlings3.github.io/iesdp/"><acronym title="Infinity Engine Structures Description Project">IESDP</acronym></a>, maintained by igi and lynx.</li>
+          </ul><br><br>
 
-            <li><a href="http://www.rarlab.com/">WinRAR</a>, by Eugene Roshal/Alexander Roshal</li>
-            <li><a href="http://iesdp.gibberlings3.net">IESDP</a>, maintained by igi</li>
-          </ul>
           <h5>Copyright Notice:</h5>
           <div class="important">
             <p>The Sarevok Friendship was developed by Aeryn, based on material from the game Baldur's Gate II and its expansion.</p>
-
             <p>All mod content is &copy; Aeryn.</p>
             <p>Baldur's Gate II: Shadows of Amn and Baldur's Gate II: Throne of Bhaal &copy; TSR, Inc. The BioWare Infinity Engine is &copy; BioWare Corp.</p>
             <p>Please note that any and all redistribution and/or hosting of this mod is expressly unwanted without permission from the author(s).</p>
@@ -419,23 +427,54 @@
         <a name="version" id="version"></a>
 
         <div class="content">
-          <h2>Version history</h2>
-                   <h6>14 August 2017 - Version 2.0:</h6>
-          <ul>
-            <li>Added French translation provided by Isaya and included better EE/EET compatibility</li>
-            <li>Changed readme path to the up to date one (v2.1)</li>
-            <li>Added Polish translation by Astharoshe, member of Stars of Mystra (v2.2)</li>
-            <li>Added translators to tp2 (v2.2)</li>
-            <li>Added Chinese translation by Merzbau (v2.3)</li>
-            <li>Fixed Draconis talk (v2.4)</li>
-            <li>WeiDU update (v2.4)</li>
-          </ul>
-          <h6>30 December 2012 - Version 1.0:</h6>
-          <ul>
-            <li>Initial release</li>
-          </ul>
-          <address>
+          <h2>Version history</h2><br>
 
+          <h6>Version 2.5 (November 25, 2019)</h6>
+          <ul>
+            <li>Added <em>sarevokfriendship.ini</em> metadata file to support AL|EN's "Project Infinity".</li>
+            <li>Added REQUIRE_PREDICATE process to avoid installing the mod in inaccurate games.</li>
+            <li>tp2 file: added credits for translations.</li>
+            <li>README command now accepts translated files.</li>
+            <li>Updated deprecated modding tools links.</li>
+            <li>Lower cased files.</li>
+            <li>Updated and renamed readme files to <em>sarevokfriendship-readme-%LANGUAGE%.html</em>.</li>
+            <li>Included Linux and Mac Os X versions in the same package (thanks AL|EN!).</li>
+            <li>Transfered mod to SpellHold Studios GitHub account.</li>
+          </ul><br>
+
+          <h6>Version 2.4 (14 August 2017)</h6>
+          <ul>
+            <li>Fixed Draconis talk.</li>
+            <li>Updated WeiDU installer to v246.</li>
+          </ul><br>
+
+          <h6>Version 2.3</h6>
+          <ul>
+            <li>Added Chinese translation by Merzbau.</li>
+         </ul><br>
+
+          <h6>Version 2.2</h6>
+          <ul>
+            <li>Added Polish translation by Astharoshe, member of Stars of Mystra.</li>
+            <li>Added translators to tp2.</li>
+         </ul><br>
+
+          <h6>Version 2.1</h6>
+          <ul>
+            <li>Changed readme path to the up to date one.</li>
+         </ul><br>
+
+          <h6>Version 2.0 (April 20, 2014)</h6>
+          <ul>
+            <li>Added French translation provided by Isaya and included better EE/EET compatibility.</li>
+          </ul><br>
+
+          <h6>Version 1.0 (December 30, 2012)</h6>
+          <ul>
+            <li>Initial release.</li>
+          </ul><br>
+
+          <address>
             <span class="footer">Sarevok Friendship &gt; Version History</span> &#8226;<a href="#top">BACK TO TOP</a>
           </address>
         </div>
