--- a/sarevokfriendship/sarevokfriendship-readme-french.html
+++ b/sarevokfriendship/sarevokfriendship-readme-french.html
@@ -433,6 +433,7 @@
           <ul>
             <li>Added <em>sarevokfriendship.ini</em> metadata file to support AL|EN's "Project Infinity".</li>
             <li>Added REQUIRE_PREDICATE process to avoid installing the mod in inaccurate games.</li>
+            <li>Component: added <em>DESIGNATED</em> number and "<em>sarevok_friendship</em>" LABEL.</li>
             <li>tp2 file: added credits for translations.</li>
             <li>README command now accepts translated files.</li>
             <li>Updated deprecated modding tools links.</li>
