--- a/sarevokfriendship/sarevokfriendship-readme-english.html
+++ b/sarevokfriendship/sarevokfriendship-readme-english.html
@@ -399,6 +399,7 @@
             <li>French translation: Isaya.</li>
             <li>Polish translation: Astharoshe, member of Stars of Mystra.</li>
             <li>Chinese translation: Merzbau.</li>
+            <li>Russian translation: Arkie.</li>
             <li>With thanks to The IEP team, Alessia, IceDragon, BGII-addicted, AmyAE, Dagger, lotiel, JupitersDarling, zarffyn and Arconian03.</li>
           </ul><br><br>
 
@@ -428,6 +429,12 @@
 
         <div class="content">
           <h2>Version history</h2><br>
+
+      <h6>Version 2.7 (November 20, 2022)</h6>
+
+		  <ul>
+        <li>Added Russian translation by Arkie.</li>
+		  </ul><br>
 
 		  <h6>Version 2.6 (December 14, 2019)</h6>
 
