--- a/sarevokfriendship/sarevokfriendship-readme-french.html
+++ b/sarevokfriendship/sarevokfriendship-readme-french.html
@@ -399,6 +399,7 @@
             <li>Traduction française : Isaya.</li>
             <li>Traduction polonaise : Astharoshe, member of Stars of Mystra.</li>
             <li>Traduction chinoise: Merzbau.</li>
+            <li>Traduction russe: Arkie.</li>
             <li>Remerciements à : l'équipe IEP, Alessia, IceDragon, BGII-addicted, AmyAE, Dagger, lotiel, JupitersDarling, zarffyn et Arconian03</li>
           </ul><br><br>
 
@@ -428,6 +429,12 @@
 
         <div class="content">
           <h2>Historique des versions</h2><br>
+
+          <h6>Version 2.7 (November 20, 2022)</h6>
+
+          <ul>
+            <li>Added Russian translation by Arkie.</li>
+          </ul><br>
 
 		  <h6>Version 2.6 (December 14, 2019)</h6>
 
